User registering, login, logout; DB-init script

--- a/fragments/mainlogin.html
+++ b/fragments/mainlogin.html
@@ -3,7 +3,7 @@
     <?php if (!$model->logged) : ?>
         <div>
             <div class="row text-center">
-                <a class="strong" href="<?= $ctx->util->fullUrl('login', 'https://') ?>">
+                <a class="strong" href="<?= url('login') ?>">
                     Login (register) with Username and Password
                 </a>
             </div>
