--- a/css/common_bs.css
+++ b/css/common_bs.css
@@ -326,36 +326,21 @@ pre code {
     display: inline-block;
 }
 
-.height-50 {
-    height: 50px;
-}
-.height-100 {
-    height: 100px;
-}
-.height-150 {
-    height: 150px;
-}
-.height-200 {
-    height: 200px;
-}
-.height-250 {
-    height: 250px;
-}
-.height-300 {
-    height: 300px;
-}
+.height-50 { height: 50px; }
+.height-100 { height: 100px; }
+.height-150 { height: 150px; }
+.height-200 { height: 200px; }
+.height-250 { height: 250px; }
+.height-300 { height: 300px; }
 
-.red {
-    color: #f00;
-}
-
-.green {
-    color: #0d0;
-}
-
-.black {
-    color: #000;
-}
+.red { color: #f00; }
+.green { color: #0d0; }
+.black { color: #000; }
+.bgr-yellow { background: yellow; }
+.bgr-orange { background: #fc3; }
+.bgr-purple { background: #f9f; }
+.bgr-ltblue { background: #bdf; }
+.bgr-gray { background: #888; }
 
 .solved {
     background-color: #8f8 !important;
@@ -366,14 +351,6 @@ pre code {
 }
 .tried {
     background-color: #faf !important;
-}
-
-.bgr-ltblue {
-    background: #bdf;
-}
-
-.bgr-gray {
-    background: #888;
 }
 
 .red-warning {
