Licenses and customization

--- a/fragments/metas.html
+++ b/fragments/metas.html
@@ -1,5 +1,4 @@
 <meta name="description" content="<?= $ctx->miscService->formatDescription() ?>">
-<meta name="keywords" content="<?= $ctx->miscService->formatKeywords() ?>">
-<meta name="author" content="Rodion Gorkovenko">
+<meta name="author" content="<?= $ctx->elems->conf->author ?>">
 <meta name="robots" content="<?= $ctx->elems->get('robots', 'index,follow') ?>">
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
