--- a/fragments/footer.html
+++ b/fragments/footer.html
@@ -1,6 +1,8 @@
 <div class="row">
     <div class="col-xs-4">
-        &copy; 2013-<?= date('Y') ?> by Rodion Gorkovenko<br/>with the help of You All
+        <?= $ctx->elems->conf->copyright ?>
+        <br/>
+        based upon <a href="https://github.com/codeabbey/src">CodeAbbey opensource</a>
     </div>
     <div class="col-xs-4 text-center">
         <a href="<?= url('wiki', 'param', 'copyright') ?>">Contacts and Support</a>
