--- a/fragments/menu-bs.html
+++ b/fragments/menu-bs.html
@@ -2,7 +2,7 @@
 <li><a href="<?= url('main') ?>" title="Login and Main info">Home<?= $ctx->auth->loggedUser() === null ? ' / Login' : '' ?></a></li>
 <li><a href="<?= url('task_list') ?>" title="Programming problems list">Problems</a></li>
 <li class="hidden-xs"><a href="<?= url('user_ranking') ?>" title="Programmer rating list">Ranking</a></li>
-<li><a href="<?= url('forum_view') ?>">Forum</a></li>
+<li><a href="<?= url($ctx->elems->conf->singleForum ? 'forum_view' : 'forum_main') ?>">Forum</a></li>
 <li class="hidden-xs"><a href="<?= url('wiki', 'param', 'help') ?>">Help</a></li>
 <li class="hidden-xs"><a href="<?= url('mess_hall') ?>">Mess</a></li>
 </ul>
