Languages list customization

--- a/fragments/taskview/runtools.html
+++ b/fragments/taskview/runtools.html
@@ -6,7 +6,9 @@
             </td></tr>
             <tr>
                 <td>
-                    <input type="button" id="run-javascript" value="JavaScript" title="Read from 'input()', write to 'output(...)'"/><br/>
+                    <input type="button" id="run-javascript" value="JavaScript"
+                        onclick="runJavaScript()"
+                        title="Read from 'input()', write to 'output(...)'"/><br/>
                     <br/><br/>
                     <span class="strong">Web Compilers</span><br/>
                     <a href="http://ideone.com" target="_blank">IdeOne.com</a><br/>
