--- a/fragments/taskview/solcaption.html
+++ b/fragments/taskview/solcaption.html
@@ -16,5 +16,11 @@
             <option value="<?= $langKey ?>"><?= $langVal ?></option>
             <?php endforeach; ?>
         </select>
+        <button class="btn btn-success form-control" id="run-any" type="button">Run</button>
     </div>
+    <script>
+    var executorsForRunButton ={
+        'javascript': '#',
+    };
+    </script>
 </div>
